Fixes overlap.

--- a/scss/modules/_sponsor.scss
+++ b/scss/modules/_sponsor.scss
@@ -36,7 +36,6 @@
         vertical-align: top;
         word-spacing: normal;
         display: inline-block;
-        vertical-align: top;
         margin-left: 1%;
         margin-right: 1%;
       }
